--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -110,6 +110,11 @@
         <div ng-repeat="user in similarUsers">
             {% include 'policia/usuario-twitter.html' %}
         </div>
+        {% verbatim %}
+        <div ng-show="resultsDataURI">
+            <a id="btn-descargar" download="resultados.csv" ng-href="{{ resultsDataURI }}" class="btn btn-primary"><i class="md md-cloud-download"></i> Descargar como CSV</a>
+        </div>
+        {% endverbatim %}
     </div>
 </div>
 
@@ -117,4 +122,5 @@
 
 {% block scripts %}
 <script src="{% static "policia/js/controllers/search-text.js" %}"></script>
+<script src="{% static "policia/js/controllers/csv-converter.js" %}"></script>
 {% endblock %}
