--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -89,8 +89,11 @@
                                         {% endif %}">
                                     <i class="md md-access-time"></i>
                                     <span>
-                                        Ver tareas pendientes
+                                        Tareas pendientes
                                     </span>
+                                    {% if numTareasFinalizadas > 0 %}
+                                        <span class="label label-primary pull-right">{{ numTareasFinalizadas }}</span>
+                                    {% endif %}
                                 </a>
                             </li>
 
