--- a/website/policia/templates/policia/buscar-similares.html
+++ b/website/policia/templates/policia/buscar-similares.html
@@ -25,7 +25,7 @@
 
                     <div class="row">
                         <div class="col-md-6 col-lg-5">
-                            <fieldset ng-class="searchUsernameClass">
+                            <fieldset>
                                     <label for="search-username">Buscar usuarios similares a:  </label>
                                     <div class="form-group">
                                         <input type="text"
@@ -35,6 +35,9 @@
                                             autofocus
                                             ng-model="searchUsername"
                                             ng-change="checkUsername()"/>
+                                            <label>
+                                                <i ng-class="usernameValidationClass"></i>
+                                            </label>
                                     </div>
                             </fieldset>
                             <fieldset>
