Enviar formularios con enter

--- a/website/policia/templates/policia/buscar-similares.html
+++ b/website/policia/templates/policia/buscar-similares.html
@@ -89,11 +89,7 @@
 
                             <fieldset ng-show="searchButtonVisible">
                                 <div class="form-group">
-
-                                    <label for="search-button" class="form-control btn btn-primary">
-                                        <i class="md md-search"></i> Buscar similares
-                                    </label>
-                                    <input ng-click="search()" id="search-button" name="search-button" class="hidden" type="button" value="Buscar"/>
+                                    <input ng-click="search()" class="form-control btn btn-primary" id="search-button" name="search-button" type="submit" value="Buscar similares"/>
                                 </div>
                             </fieldset>
                         </div>
