--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -81,13 +81,10 @@
                                 <br/>
                                 <div class="form-group" ng-show="searchButtonVisible">
 
-                                    <label for="search-button" class="form-control btn btn-primary pull-right">
-                                        <i class="md md-search"></i> Buscar similares
-                                    </label>
                                     <input id="search-button"
                                         ng-click="search()"
-                                        name="search-button" class="hidden"
-                                        type="submit" value="Buscar"/>
+                                        name="search-button" class="form-control btn btn-primary pull-right"
+                                        type="submit" value="Buscar similares"/>
 
                                 </div>
                             </fieldset>
