comenzando comparacion de tiempos de publicacion

--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -116,6 +116,11 @@
                                             <i class="md md-find-in-page"></i><span>Por texto</span>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="{% url 'policia:buscarTiempo' %}" class="waves-effect waves-primary">
+                                            <i class="md md-find-in-page"></i><span>Por Tiempo</span>
+                                        </a>
+                                    </li>
 
                                 </ul>
                             </li>
